# rmk-palettefx

./: Cargo.toml  README.md  build.rs
palettes/: afterburn.toml  amber.toml  badwolf.toml  carnival.toml  classic.toml  dracula.toml  groovy.toml  notpink.toml  phosphor.toml  polarized.toml  rosegold.toml  sport.toml  synthwave.toml  thermal.toml  viridis.toml  watermelon.toml
src/: color.rs  effect_state.rs  layout.rs  led_driver.rs  lib.rs  math.rs  palette.rs  processor.rs  time.rs
src/effects/: flow.rs  gradient.rs  mod.rs  reactive.rs  ripple.rs  sparkle.rs  vortex.rs
