[package]
name = "rmk-palettefx"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Palette-sampled RGB matrix effects ported from Pascal Getreuer's PaletteFx module."
repository = "https://github.com/jpds/rmk-palettefx"
keywords = ["no-std", "embedded", "rgb", "keyboard"]
categories = ["embedded", "no-std"]

[dependencies]
micromath = { version = "2.1", default-features = false }
rand_core = { version = "0.10", default-features = false }
rand_pcg = { version = "0.10", default-features = false }

[build-dependencies]
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
serde = { version = "1", features = ["derive"] }
